2006-05-10  Sushma Rai  <rsushma@novell.com>

	* mail/mail-stub-exchange.c (subscribe_folder): Not adding toplevel
	"All Public Folders" to the list of favorite folders. Fixes #339277. 

2006-05-10  Sushma Rai  <rsushma@novell.com>

	* mail/mail-stub-exchange.c (unsubscribe_folder): Extracting the folder
	name instead of folder patch. Fixes the issue of unsubscribing the sub
	favorite folders. Related to bug #268412.

2006-05-04  Jeffrey Stedfast  <fejj@novell.com>

	Fix for the hang in Novell bug #166987

	* camel/camel-stub.c (status_main): Create a CamelOperation
	context so our main-loop/reads/writes can all be cancelled.
	(finalize): Call camel_operation_cancel() on the stub's
	CamelOperation so that the status_main thread exits more-or-less
	immediately rather than hanging indefinitely in a system read()
	call.

	* camel/camel-stub-marshal.c (do_read): Use camel_read() so the
	read is cancellable.
	(camel_stub_marshal_flush): Use camel_write().

2006-04-24  Chenthill Palanisamy  <pchenthill@novell.com>

	* calendar/e-cal-backend-exchange.c: (build_msg): Not freeing the
	destination file for attachements. Fixes #330494.

2006-04-21  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #334727
	* calendar/e-cal-backend-exchange-calendar.c: 
	(add_vevent): Return correct status.
	(add_ical), (receive_objects): Pass the duped string.
				       
2006-04-18  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #330674
	* calendar/e-cal-backend-exchange-calendar.c:
	(receive_objects): Passed ECalComponentId for notifying
	clients on objects removed.

2006-04-18  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #334900
	* calendar/e-cal-backend-exchange-calendar.c: (receive_objects):
	Do not remove the instance as exception would be set in the method
	modify_object.
	* calendar/e-cal-backend-exchange.c:
	(e_cal_backend_exchange_modify_object):Set the exception alone instead
	of removing the instance.

2006-04-10  Sushma Rai  <rsushma@novell.com>
