@@ -1,3 +1,8 @@
+2006-05-10  Vandana Shenoy B  <shvandana@novell.com>
+
+	* addressbook/e-book-backend-exchange.c (proppatch_address): Added a
+	check for modifying a contact. Fixes #330265.
+
 2006-05-10  Sushma Rai  <rsushma@novell.com>
 
 	* mail/mail-stub-exchange.c (subscribe_folder): Not adding toplevel
